plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.26.0'
}

group 'com.example'
version '1.1'

repositories {
  mavenCentral()
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'com.example.chess'
  mainClass = 'com.example.chess.MainApplication'
}

javafx {
  version = '17.0.6'
  modules = ['javafx.controls']
}

dependencies {
  implementation 'org.openjfx:javafx-controls:17.0.6'
  implementation 'org.openjfx:javafx-graphics:17.0.6'
  implementation 'org.openjfx:javafx-base:17.0.6'
}


jlink {
  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

  jpackage {
    imageOptions = ['--icon', 'src/main/resources/images/app_icon.ico']
    installerOptions = ['--description', 'Chess Engine Game']
    installerType = 'exe'
    jvmArgs = ['--add-modules', javafx.modules.join(',')]
    imageOptions = ['--win-console']
  }
}
